# doclayer-rs

./: Cargo.toml  README.md  Taskfile.yml  repomix.config.json
.chglog/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  stable.yml
.goose/recipes/: generate-docs.yaml  refine-docs.yaml
.taskfile/: agent.yml  devtools.yml  version.yml
doclayer/: Cargo.toml
doclayer-core/: Cargo.toml  README.md
doclayer-core/src/: backend.rs  collection.rs  document.rs  error.rs  lib.rs  migrate.rs  page.rs  query.rs  store.rs
doclayer-macros/: Cargo.toml  README.md
doclayer-macros/src/: lib.rs
doclayer-memory/: Cargo.toml  README.md
doclayer-memory/src/: evaluator.rs  lib.rs  store.rs
doclayer-mongodb/: Cargo.toml  README.md
doclayer-mongodb/src/: lib.rs  query.rs  sanitizer.rs  store.rs
doclayer/src/: lib.rs  prelude.rs
